<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"
            tools:context=".screens.main.MainActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="0dp"
                android:hint="@string/input_hint_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="phone"
                    android:inputType="phone"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_from_contacts_button"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number_input_layout"
                android:layout_alignEnd="@id/phone_number_input_layout"
                android:contentDescription="@string/button_choose_from_contacts"
                android:tooltipText="@string/button_choose_from_contacts"
                app:icon="@drawable/ic_contact"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/paste_from_clipboard_button"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number_input_layout"
                android:layout_toStartOf="@id/choose_from_contacts_button"
                android:contentDescription="@string/button_paste_from_clipboard_description"
                android:tooltipText="@string/button_paste_from_clipboard_description"
                app:icon="@drawable/ic_clipboard_paste"
                tools:targetApi="o" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/open_button_card"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/paste_from_clipboard_button"
                android:layout_marginBottom="@dimen/open_button_layout_vertical_padding">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chat_app_button_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/open_button_layout_vertical_padding"
                    android:clipToPadding="false" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/open_button_card"
                android:hint="@string/input_hint_message">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/history_title"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/message_input_layout"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/label_history" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/history_view_all"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/history_title"
                android:layout_alignParentEnd="true"
                android:text="@string/label_history_view_all" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/history_title" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
